--- a/source/Controls/PluginList.xaml
+++ b/source/Controls/PluginList.xaml
@@ -29,6 +29,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -58,8 +59,19 @@
                 <Label Content="{DynamicResource LOCSuccessStoryGroupByUnlocked}" />
             </CheckBox>
         </Grid>
+
+        <Grid Margin="0,0,0,10" Grid.Row="1">
+            <TabControl Name="PART_TabControl" SelectionChanged="PART_TabControl_SelectionChanged">
+                <TabItem MaxWidth="200" />
+                <TabItem MaxWidth="200" />
+                <TabItem MaxWidth="200" />
+                <TabItem MaxWidth="200" />
+                <TabItem MaxWidth="200" />
+                <TabItem MaxWidth="200" Header="123" />
+            </TabControl>
+        </Grid>
         
-        <Grid Name="PART_GridContener" Grid.Row="1">
+        <Grid Name="PART_GridContener" Grid.Row="2">
             <controls:ListBoxExtend x:Name="lbAchievements" SizeChanged="LbAchievements_SizeChanged"
                                     BubblingScrollEvents="True" Style="{StaticResource {x:Type ListBox}}"
                                     ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto" 
