--- a/source/Controls/PluginCompactList.xaml
+++ b/source/Controls/PluginCompactList.xaml
@@ -21,6 +21,7 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <convertersshared:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
         <converters1:SetColorConverter x:Key="SetColorConverter" />
+        <convertersshared:InvertedBoolenConverter x:Key="InvertedBoolenConverter" />
         <converters:StringNullOrEmptyToBoolConverter x:Key="StringNullOrEmptyToBoolConverter" />
         <convertersshared:ImageToGrayConverter x:Key="ImageToGrayConverter" />
     </controls:PluginUserControlExtend.Resources>
@@ -65,6 +66,9 @@
                             <customs:AchievementImage Width="{Binding ElementName=PART_GridContener, Path=Tag}"
                                                       Height="{Binding ElementName=PART_GridContener, Path=Tag}"
                                                       Icon="{Binding Icon, IsAsync=True}"
+                                                      IsLocked="{Binding IsUnlock, Converter={StaticResource InvertedBoolenConverter}}"
+                                                      IconCustom="{Binding IconCustom}"
+                                                      IconText="{Binding IconText}"
                                                       IsGray="{Binding IsGray}"
                                                       Percent="{Binding Percent}"
                                                       EnableRaretyIndicator="{Binding EnableRaretyIndicator}"
