--- a/source/Controls/PluginButton.xaml
+++ b/source/Controls/PluginButton.xaml
@@ -8,7 +8,7 @@
         xmlns:local="clr-namespace:SuccessStory.Controls"
         xmlns:converters="clr-namespace:CommonPlayniteShared.Converters"
         xmlns:convertersshared="clr-namespace:CommonPluginsShared.Converters"
-        mc:Ignorable="d" d:DesignHeight="40" d:DesignWidth="150"
+        mc:Ignorable="d" d:DesignHeight="40" 
         d:DataContext="{d:DesignInstance Type=local:PluginButtonDataContext, IsDesignTimeCreatable=True}">
 
     <controls:PluginUserControlExtend.Resources>
@@ -17,30 +17,7 @@
         <convertersshared:HeightToFontSizeConverter x:Key="HeightToFontSizeConverter" />
     </controls:PluginUserControlExtend.Resources>
 
-    <Button Name="PART_PluginButton" Click="PART_PluginButton_Click">
-        <Button.Style>
-            <Style TargetType="{x:Type Button}" BasedOn="{StaticResource {x:Type Button}}">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type Button}">
-                            <Border x:Name="Border" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}"                            
-                                    CornerRadius="{DynamicResource ControlCornerRadius}" Style="{DynamicResource HighlightBorder}"
-                                    BorderBrush="{TemplateBinding BorderBrush}">
-                                <ContentPresenter HorizontalAlignment="Stretch"
-                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                                  Margin="10,2,10,2" RecognizesAccessKey="True" />
-                            </Border>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsFocused" Value="True">
-                                    <Setter Property="BorderBrush" Value="{DynamicResource GlyphBrush}" TargetName="Border" />
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-        </Button.Style>
-        
+    <Button Name="PART_PluginButton" Click="PART_PluginButton_Click">        
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
@@ -69,54 +46,19 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <Label Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Content="&#xea33;" FontFamily="{DynamicResource CommonFont}" 
-                       Visibility="{Binding Is100Percent, Converter={StaticResource BooleanToVisibilityConverter}}"
-                       VerticalAlignment="Center"
-                       FontSize="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=FontSize}">
-                    <Label.Style>
-                        <Style TargetType="Label">
-                            <Setter Property="Padding" Value="5,3,5,5" />
-                            <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=IsMouseOver}" Value="True">
-                                    <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Label.Style>
-                </Label>
+                <TextBlock Grid.Column="0" Grid.Row="0" Grid.RowSpan="3" Text="&#xea33;" FontFamily="{DynamicResource CommonFont}" 
+                           Visibility="{Binding Is100Percent, Converter={StaticResource BooleanToVisibilityConverter}}"
+                           VerticalAlignment="Center" Padding="5,3,5,5"
+                           FontSize="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=FontSize}" />
 
-                <Label Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Margin="0,-3,0,-3"
-                       Content="{DynamicResource LOCSuccessStoryAchievements}" 
-                       FontSize="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight, Converter={StaticResource HeightToFontSizeConverter}}">
-                    <Label.Style>
-                        <Style TargetType="Label">
-                            <Setter Property="Padding" Value="5,3,5,5" />
-                            <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=IsMouseOver}" Value="True">
-                                    <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Label.Style>
-                </Label>
+                <TextBlock Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="3" Margin="0,-3,0,-3"
+                           Text="{DynamicResource LOCSuccessStoryAchievements}" Padding="5,3,5,5"
+                           FontSize="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight, Converter={StaticResource HeightToFontSizeConverter}}" />
 
-                <Label Content="{Binding LabelContent, FallbackValue='15/23'}" 
-                       Margin="0,-3,0,-3" Grid.Column="1" Grid.Row="2" 
-                       FontSize="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight, Converter={StaticResource HeightToFontSizeConverter}}">
-                    <Label.Style>
-                        <Style TargetType="Label">
-                            <Setter Property="Padding" Value="5,3,5,5" />
-                            <Setter Property="Foreground" Value="{DynamicResource GlyphBrush}" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=IsMouseOver}" Value="True">
-                                    <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </Label.Style>
-                </Label>
+                <TextBlock Text="{Binding LabelContent, FallbackValue='15/23'}" 
+                           Margin="0,-3,0,-3" Grid.Column="1" Grid.Row="2" Padding="5,3,5,5"
+                           FontSize="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight, Converter={StaticResource HeightToFontSizeConverter}}" />
+                
                 <ProgressBar Grid.Column="3" Grid.Row="2" Height="12"
                              Maximum="{Binding Maximum, Mode=OneWay, FallbackValue='100'}" 
                              Value="{Binding Value, Mode=OneWay, FallbackValue='30'}">
@@ -124,10 +66,10 @@
                         <Style TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource {x:Type ProgressBar}}">
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=IsMouseOver}" Value="True">
-                                    <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
+                                    <Setter Property="Foreground" Value="{Binding ElementName=PART_PluginButton, Path=Foreground}" />
                                 </DataTrigger>
                                 <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=IsChecked}" Value="True">
-                                    <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
+                                    <Setter Property="Foreground" Value="{Binding ElementName=PART_PluginButton, Path=Foreground}" />
                                 </DataTrigger>
                             </Style.Triggers>
                         </Style>
